@@ -1,0 +1,2 @@
+extern int hdaudioctl_graph(int fd, int argc, char *argv[]);
+extern void usage(void);
